--- a/BankApplication.Services/BankApplication.Services.csproj
+++ b/BankApplication.Services/BankApplication.Services.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BankApplication.Models\BankApplication.Models.csproj" />
+  </ItemGroup>
+
 </Project>
