--- a/BankConsole/BankApplicationConsole.csproj
+++ b/BankConsole/BankApplicationConsole.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyName>BankApplication.Console</AssemblyName>
+    <RootNamespace>BankApplication.Console</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
