Changs init Transaction

--- a/BankApplication.Services/BankApplication.Services.csproj
+++ b/BankApplication.Services/BankApplication.Services.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BankApplication.Models\BankApplication.Models.csproj" />
+    <ProjectReference Include="..\Concerns\BankApplication.Concerns.csproj" />
   </ItemGroup>
 
 </Project>
