--- a/Concerns/BankApplication.Concerns.csproj
+++ b/Concerns/BankApplication.Concerns.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BankApplication.Models\BankApplication.Models.csproj" />
   </ItemGroup>
 
